update google sheet and add 2 visualization figures

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0; /* Remove default margin */
-            padding: 0; /* Remove default padding */
+            margin: 0;
+            /* Remove default margin */
+            padding: 0;
+            /* Remove default padding */
             position: relative;
         }
 
@@ -25,7 +27,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: -1; /* Place it behind the content */
+            z-index: -1;
+            /* Place it behind the content */
             overflow: hidden;
         }
 
@@ -36,8 +39,10 @@
             width: 100vw;
             height: 100vh;
             transform: translate(-50%, -50%);
-            object-fit: cover; /* Ensure the video covers the entire background */
-            pointer-events: none; /* Disable interaction with the iframe */
+            object-fit: cover;
+            /* Ensure the video covers the entire background */
+            pointer-events: none;
+            /* Disable interaction with the iframe */
         }
 
         /* Overlay to adjust transparency */
@@ -48,7 +53,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.2); /* Adjust transparency (0.5 = 50% opacity) */
+            background-color: rgba(0, 0, 0, 0.2);
+            /* Adjust transparency (0.5 = 50% opacity) */
         }
 
         /* Click Blocker Overlay */
@@ -57,29 +63,39 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: calc(100% - 100px); /* Adjust height to exclude the footer */
-            z-index: 0; /* Place it above the video but below the content */
+            height: calc(100% - 100px);
+            /* Adjust height to exclude the footer */
+            z-index: 0;
+            /* Place it above the video but below the content */
         }
 
         /* Content styling */
         .content {
             position: relative;
-            z-index: 1; /* Place content above the video and click blocker */
-            background-color: rgba(255, 255, 255, 0.9); /* Slightly transparent background for readability */
+            z-index: 1;
+            /* Place content above the video and click blocker */
+            background-color: rgba(255, 255, 255, 0.9);
+            /* Slightly transparent background for readability */
             padding: 20px;
             border-radius: 10px;
-            max-width: 1200px; /* Wider for larger screens */
-            width: 90%; /* Responsive width */
-            margin: 50px auto; /* Center the content */
+            max-width: 1200px;
+            /* Wider for larger screens */
+            width: 90%;
+            /* Responsive width */
+            margin: 50px auto;
+            /* Center the content */
         }
 
         /* Ensure the video doesn't autoplay on mobile devices */
         @media (max-width: 768px) {
             .video-background {
-                display: none; /* Hide video on small screens */
+                display: none;
+                /* Hide video on small screens */
             }
+
             .content {
-                background-color: #fff; /* Solid background for mobile */
+                background-color: #fff;
+                /* Solid background for mobile */
             }
         }
 
@@ -121,7 +137,8 @@
 
         .section h2 {
             text-align: center;
-            font-size: 2rem; /* Responsive font size */
+            font-size: 2rem;
+            /* Responsive font size */
             color: #333;
             margin-bottom: 20px;
         }
@@ -129,7 +146,8 @@
         /* Grid Container */
         .grid-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Auto-adjust columns */
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            /* Auto-adjust columns */
             gap: 20px;
         }
 
@@ -138,8 +156,10 @@
         }
 
         .grid-item img {
-            width: 100%; /* Make images responsive */
-            height: auto; /* Maintain aspect ratio */
+            width: 100%;
+            /* Make images responsive */
+            height: auto;
+            /* Maintain aspect ratio */
             border: 1px solid #ccc;
             border-radius: 8px;
             cursor: pointer;
@@ -155,7 +175,8 @@
         .responsive-iframe-container {
             position: relative;
             width: 100%;
-            padding-bottom: 60%; /* Aspect ratio for iframe */
+            padding-bottom: 60%;
+            /* Aspect ratio for iframe */
             overflow: hidden;
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -249,19 +270,23 @@
         /* Responsive Adjustments */
         @media (max-width: 768px) {
             .content {
-                padding: 15px; /* Reduce padding on smaller screens */
+                padding: 15px;
+                /* Reduce padding on smaller screens */
             }
 
             .nav-tabs {
-                flex-direction: column; /* Stack navigation tabs vertically */
+                flex-direction: column;
+                /* Stack navigation tabs vertically */
             }
 
             .nav-tabs a {
-                margin: 5px 0; /* Add spacing between stacked tabs */
+                margin: 5px 0;
+                /* Add spacing between stacked tabs */
             }
 
             .section h2 {
-                font-size: 1.5rem; /* Smaller font size on mobile */
+                font-size: 1.5rem;
+                /* Smaller font size on mobile */
             }
         }
     </style>
@@ -279,15 +304,11 @@
     <div class="video-background">
         <iframe
             src="https://www.youtube.com/embed/eaf61YXACRc?autoplay=1&mute=1&loop=1&start=992&playlist=eaf61YXACRc&controls=0&modestbranding=1&rel=0"
-            frameborder="0"
-            allow="autoplay; encrypted-media"
-            allowfullscreen>
+            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
         </iframe>
     </div>
-
     <!-- Click Blocker Overlay -->
     <div class="click-blocker"></div>
-
     <!-- Main Content -->
     <div class="content">
         <h1>歡迎來到考特打造的條通祭分析</h1>
@@ -300,14 +321,16 @@
         <!-- Google Sheet Section -->
         <div class="section" id="google-sheet-section">
             <h2>Google Sheet 數據
-                <a href="https://docs.google.com/spreadsheets/d/1zRhaKjJn8UQv-lj-UO11m-LZQb_XkaGj-znNPA_h9oE/edit?usp=sharing" target="_blank" class="fashionable-button">
+                <a href="https://docs.google.com/spreadsheets/d/1zRhaKjJn8UQv-lj-UO11m-LZQb_XkaGj-znNPA_h9oE/edit?usp=sharing"
+                    target="_blank" class="fashionable-button">
                     <i class="fas fa-external-link-alt"></i> 直奔 Google Sheets
                 </a>
             </h2>
             <div class="grid-container">
                 <div class="grid-item">
                     <div class="responsive-iframe-container">
-                        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRIRuQPAehPk2sAMXcZCCyYLan7L2JdeKwWbWr8eBOIYMoo4jb2uHX9Ew3X3E6Tn9k-KB8vLNRb2pvT/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                        <iframe
+                            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRIRuQPAehPk2sAMXcZCCyYLan7L2JdeKwWbWr8eBOIYMoo4jb2uHX9Ew3X3E6Tn9k-KB8vLNRb2pvT/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                     </div>
                 </div>
             </div>
@@ -318,15 +341,18 @@
             <div class="grid-container">
                 <div class="grid-item">
                     <h3>評論分數前十</h3>
-                    <iframe src="maps/top_10_bars_by_rating.html" title="評論分數前十" style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
+                    <iframe src="maps/top_10_bars_by_rating.html" title="評論分數前十"
+                        style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
                 </div>
                 <div class="grid-item">
                     <h3>貝氏平均前十</h3>
-                    <iframe src="maps/top_10_bars_by_bayesian.html" title="貝氏平均前十" style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
+                    <iframe src="maps/top_10_bars_by_bayesian.html" title="貝氏平均前十"
+                        style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
                 </div>
                 <div class="grid-item">
                     <h3>評論數目前十</h3>
-                    <iframe src="maps/top_10_bars_by_reviews.html" title="評論數目前十" style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
+                    <iframe src="maps/top_10_bars_by_reviews.html" title="評論數目前十"
+                        style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
                 </div>
             </div>
         </div>
@@ -353,7 +379,23 @@
             </div>
             <div class="grid-container">
                 <div class="grid-item">
-                    <a href="images/correlation_heatmap.png" data-lightbox="analysis" data-title="數值欄位相關性 (貝氏平均評分, 評分, 評論數量)">
+                    <a href="images/operating_hours_distribution.png" data-lightbox="analysis"
+                        data-title="供 Shot 營運時間分布圖">
+                        <img src="images/operating_hours_distribution.png" alt="供 Shot 營運時間分布圖">
+                    </a>
+                    <p>供 Shot 營運時間分布圖</p>
+                </div>
+                <div class="grid-item">
+                    <a href="images/centered_two_column_bar_names_by_hour_with_note_under_title.png"
+                        data-lightbox="analysis" data-title="各小時開始提供 Shot 的酒吧 (按貝氏平均評分排序)">
+                        <img src="images/centered_two_column_bar_names_by_hour_with_note_under_title.png"
+                            alt="各小時開始提供 Shot 的酒吧 (按貝氏平均評分排序)">
+                    </a>
+                    <p>各小時開始提供 Shot 的酒吧 (按貝氏平均評分排序)</p>
+                </div>
+                <div class="grid-item">
+                    <a href="images/correlation_heatmap.png" data-lightbox="analysis"
+                        data-title="數值欄位相關性 (貝氏平均評分, 評分, 評論數量)">
                         <img src="images/correlation_heatmap.png" alt="數值欄位相關性">
                     </a>
                     <p>數值欄位相關性 (貝氏平均評分, 評分, 評論數量)</p>
@@ -365,7 +407,8 @@
                     <p>區域評分分佈 (中山區 vs 中正區)</p>
                 </div>
                 <div class="grid-item">
-                    <a href="images/rating_distribution_with_counts.png" data-lightbox="analysis" data-title="評分分佈 (包含計數)">
+                    <a href="images/rating_distribution_with_counts.png" data-lightbox="analysis"
+                        data-title="評分分佈 (包含計數)">
                         <img src="images/rating_distribution_with_counts.png" alt="評分分佈">
                     </a>
                     <p>評分分佈 (包含計數)</p>
@@ -377,7 +420,8 @@
                     <p>評分 vs 評論數量 (散點圖)</p>
                 </div>
                 <div class="grid-item">
-                    <a href="images/top_10_bars_bayesian_average.png" data-lightbox="analysis" data-title="貝氏平均前十 (長條圖)">
+                    <a href="images/top_10_bars_bayesian_average.png" data-lightbox="analysis"
+                        data-title="貝氏平均前十 (長條圖)">
                         <img src="images/top_10_bars_bayesian_average.png" alt="貝氏平均前十">
                     </a>
                     <p>貝氏平均前十 (長條圖)</p>
@@ -426,7 +470,9 @@
                 </a>
                 <a href="https://www.threads.net/@hsieh.scott" target="_blank">
                     <svg aria-label="Threads" viewBox="0 0 192 192" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M141.537 88.9883C140.71 88.5919 139.87 88.2104 139.019 87.8451C137.537 60.5382 122.616 44.905 97.5619 44.745C97.4484 44.7443 97.3355 44.7443 97.222 44.7443C82.2364 44.7443 69.7731 51.1409 62.102 62.7807L75.881 72.2328C81.6116 63.5383 90.6052 61.6848 97.2286 61.6848C97.3051 61.6848 97.3819 61.6848 97.4576 61.6855C105.707 61.7381 111.932 64.1366 115.961 68.814C118.893 72.2193 120.854 76.925 121.825 82.8638C114.511 81.6207 106.601 81.2385 98.145 81.7233C74.3247 83.0954 59.0111 96.9879 60.0396 116.292C60.5615 126.084 65.4397 134.508 73.775 140.011C80.8224 144.663 89.899 146.938 99.3323 146.423C111.79 145.74 121.563 140.987 128.381 132.296C133.559 125.696 136.834 117.143 138.28 106.366C144.217 109.949 148.617 114.664 151.047 120.332C155.179 129.967 155.42 145.8 142.501 158.708C131.182 170.016 117.576 174.908 97.0135 175.059C74.2042 174.89 56.9538 167.575 45.7381 153.317C35.2355 139.966 29.8077 120.682 29.6052 96C29.8077 71.3178 35.2355 52.0336 45.7381 38.6827C56.9538 24.4249 74.2039 17.11 97.0132 16.9405C119.988 17.1113 137.539 24.4614 149.184 38.788C154.894 45.8136 159.199 54.6488 162.037 64.9503L178.184 60.6422C174.744 47.9622 169.331 37.0357 161.965 27.974C147.036 9.60668 125.202 0.195148 97.0695 0H96.9569C68.8816 0.19447 47.2921 9.6418 32.7883 28.0793C19.8819 44.4864 13.2244 67.3157 13.0007 95.9325L13 96L13.0007 96.0675C13.2244 124.684 19.8819 147.514 32.7883 163.921C47.2921 182.358 68.8816 191.806 96.9569 192H97.0695C122.03 191.827 139.624 185.292 154.118 170.811C173.081 151.866 172.51 128.119 166.26 113.541C161.776 103.087 153.227 94.5962 141.537 88.9883ZM98.4405 129.507C88.0005 130.095 77.1544 125.409 76.6196 115.372C76.2232 107.93 81.9158 99.626 99.0812 98.6368C101.047 98.5234 102.976 98.468 104.871 98.468C111.106 98.468 116.939 99.0737 122.242 100.233C120.264 124.935 108.662 128.946 98.4405 129.507Z"></path>
+                        <path
+                            d="M141.537 88.9883C140.71 88.5919 139.87 88.2104 139.019 87.8451C137.537 60.5382 122.616 44.905 97.5619 44.745C97.4484 44.7443 97.3355 44.7443 97.222 44.7443C82.2364 44.7443 69.7731 51.1409 62.102 62.7807L75.881 72.2328C81.6116 63.5383 90.6052 61.6848 97.2286 61.6848C97.3051 61.6848 97.3819 61.6848 97.4576 61.6855C105.707 61.7381 111.932 64.1366 115.961 68.814C118.893 72.2193 120.854 76.925 121.825 82.8638C114.511 81.6207 106.601 81.2385 98.145 81.7233C74.3247 83.0954 59.0111 96.9879 60.0396 116.292C60.5615 126.084 65.4397 134.508 73.775 140.011C80.8224 144.663 89.899 146.938 99.3323 146.423C111.79 145.74 121.563 140.987 128.381 132.296C133.559 125.696 136.834 117.143 138.28 106.366C144.217 109.949 148.617 114.664 151.047 120.332C155.179 129.967 155.42 145.8 142.501 158.708C131.182 170.016 117.576 174.908 97.0135 175.059C74.2042 174.89 56.9538 167.575 45.7381 153.317C35.2355 139.966 29.8077 120.682 29.6052 96C29.8077 71.3178 35.2355 52.0336 45.7381 38.6827C56.9538 24.4249 74.2039 17.11 97.0132 16.9405C119.988 17.1113 137.539 24.4614 149.184 38.788C154.894 45.8136 159.199 54.6488 162.037 64.9503L178.184 60.6422C174.744 47.9622 169.331 37.0357 161.965 27.974C147.036 9.60668 125.202 0.195148 97.0695 0H96.9569C68.8816 0.19447 47.2921 9.6418 32.7883 28.0793C19.8819 44.4864 13.2244 67.3157 13.0007 95.9325L13 96L13.0007 96.0675C13.2244 124.684 19.8819 147.514 32.7883 163.921C47.2921 182.358 68.8816 191.806 96.9569 192H97.0695C122.03 191.827 139.624 185.292 154.118 170.811C173.081 151.866 172.51 128.119 166.26 113.541C161.776 103.087 153.227 94.5962 141.537 88.9883ZM98.4405 129.507C88.0005 130.095 77.1544 125.409 76.6196 115.372C76.2232 107.93 81.9158 99.626 99.0812 98.6368C101.047 98.5234 102.976 98.468 104.871 98.468C111.106 98.468 116.939 99.0737 122.242 100.233C120.264 124.935 108.662 128.946 98.4405 129.507Z">
+                        </path>
                     </svg>
                 </a>
             </div>
