--- a/index.html
+++ b/index.html
@@ -329,6 +329,10 @@
                     <i class="fas fa-external-link-alt"></i> 直奔 Google Sheets
                 </a>
             </h2>
+            <p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
+                Kamijo Salon Bar 在 Line 熱點找得到，但 Google Map 上就只能用地址去搜尋。因為 Google 地圖上沒有相關數據可以觀看，所以 Google Sheet
+                裡面這家酒吧就沒有列席。
+            </p>
             <div class="grid-container">
                 <div class="grid-item">
                     <div class="responsive-iframe-container">
