update parameters for youtube url in iframe

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <!-- YouTube Video Background -->
     <div class="video-background">
         <iframe
-            src="https://www.youtube.com/embed/eaf61YXACRc?autoplay=1&mute=1&loop=1&start=992&playlist=eaf61YXACRc&controls=0&modestbranding=1&rel=0"
+            src="https://www.youtube.com/embed/eaf61YXACRc?autoplay=1&mute=1&loop=1&start=992&playlist=eaf61YXACRc&controls=0&modestbranding=1&rel=0&showinfo=0"
             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
         </iframe>
     </div>
