--- a/index.html
+++ b/index.html
@@ -463,6 +463,17 @@
     <!-- Lightbox JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script>
+        lightbox.option({
+            'resizeDuration': 200, // Animation duration when resizing the image
+            'wrapAround': true,    // Allow cycling through images
+            'showImageNumberLabel': false, // Hide image number label
+            'alwaysShowNavOnTouchDevices': true, // Show navigation arrows on touch devices
+            'disableScrolling': true, // Prevent page scrolling when lightbox is open
+            'fadeDuration': 200,   // Fade-in duration
+            'positionFromTop': 50  // Distance from the top of the viewport
+        });
+    </script>
+    <script>
         // Smooth scrolling for navigation tabs
         document.querySelectorAll('.nav-tabs a').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
@@ -479,9 +490,9 @@
         <div>
             <p>&copy; 2025 條通祭酒吧分析. All rights reserved.</p>
             <p>
-                <a href="javascript:void(0);">Privacy Policy</a> |
-                <a href="javascript:void(0);">Terms of Service</a> |
-                <a href="javascript:void(0);">Contact Us</a>
+                <a href="#">Privacy Policy</a> |
+                <a href="#">Terms of Service</a> |
+                <a href="#">Contact Us</a>
             </p>
             <div class="social-icons">
                 <a href="https://www.facebook.com/ScottXieh/" target="_blank">
