alter workding for specific headings

--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
         <!-- Navigation Tabs -->
         <div class="nav-tabs">
             <a href="#google-sheet-section">Google Sheet 數據</a>
-            <a href="#maps-section">地圖</a>
-            <a href="#analysis-section">分析視覺化圖表</a>
+            <a href="#maps-section">排名地圖</a>
+            <a href="#analysis-section">視覺化分析</a>
         </div>
         <!-- Google Sheet Section -->
         <div class="section" id="google-sheet-section">
@@ -362,7 +362,7 @@
         </div>
         <!-- Maps Section -->
         <div class="section" id="maps-section">
-            <h2>地圖</h2>
+            <h2>排名地圖</h2>
             <div class="grid-container">
                 <div class="grid-item">
                     <h3>評論分數前十</h3>
@@ -383,7 +383,7 @@
         </div>
         <!-- Images Section -->
         <div class="section" id="analysis-section">
-            <h2>分析視覺化圖表</h2>
+            <h2>視覺化分析</h2>
             <!-- Math Formula Section -->
             <div style="margin-top: 40px; text-align: center; font-size: 1.2em; color: #333;">
                 <h3>貝氏平均公式</h3>
