--- a/index.html
+++ b/index.html
@@ -363,6 +363,12 @@
         <!-- Maps Section -->
         <div class="section" id="maps-section">
             <h2>排名地圖</h2>
+            <p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
+                點擊藍點後能看到排版沒那麼好看的資訊，這裡主要根據三種維度來看前十名的店家的位置，僅此而已。<br>
+                活動單位提供的<a href="https://maps.app.goo.gl/arNyJp3bsz2Z4xaT8?g_st=il"
+                    target="_blank">自訂地圖</a>資訊也很豐富，可以考慮交叉查詢。<br>
+                要緊的我想會是在有限的時間內，邂逅好玩、有趣的酒吧（店家）。
+            </p>
             <div class="grid-container">
                 <div class="grid-item">
                     <h3>評論分數前十</h3>
@@ -375,7 +381,7 @@
                         style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
                 </div>
                 <div class="grid-item">
-                    <h3>評論數目前十</h3>
+                    <h3>評論人次目前十</h3>
                     <iframe src="maps/top_10_bars_by_reviews.html" title="評論數目前十"
                         style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
                 </div>
