alter description for ranking map

--- a/index.html
+++ b/index.html
@@ -364,10 +364,10 @@
         <div class="section" id="maps-section">
             <h2>排名地圖</h2>
             <p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
-                點擊藍點後能看到排版沒那麼好看的資訊，這裡主要根據三種維度來看前十名的店家的位置，僅此而已。<br>
+                點擊藍點後能看到排版沒那麼好看的資訊<br>這裡主要根據三種維度來看前十名的店家的位置，僅此而已<br>
                 活動單位提供的<a href="https://maps.app.goo.gl/arNyJp3bsz2Z4xaT8?g_st=il"
                     target="_blank">自訂地圖</a>資訊也很豐富，可以考慮交叉查詢。<br>
-                要緊的我想會是在有限的時間內，邂逅好玩、有趣的酒吧（店家）。
+                要緊的我想會是在有限的時間內，邂逅好玩、有趣的酒吧（店家）
             </p>
             <div class="grid-container">
                 <div class="grid-item">
