--- a/index.html
+++ b/index.html
@@ -307,6 +307,56 @@
                 /* Smaller font size on mobile */
             }
         }
+
+        /* Description Box */
+        .description-box {
+            background-color: white;
+            border: 1px solid #ccc;
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            /* Adjust width as needed */
+            margin: 20px auto;
+            /* Center the box */
+        }
+
+        /* Typing Animation */
+        @keyframes typing {
+            from {
+                width: 0;
+            }
+
+            to {
+                width: 100%;
+            }
+        }
+
+        @keyframes blink-caret {
+
+            from,
+            to {
+                border-color: transparent;
+            }
+
+            50% {
+                border-color: black;
+            }
+        }
+
+        #descriptionText {
+            overflow: hidden;
+            white-space: nowrap;
+            border-right: 2px solid black;
+            /* Cursor effect */
+            animation:
+                typing 4s steps(40, end),
+                /* Typing animation */
+                blink-caret 0.75s step-end infinite;
+            /* Cursor blink animation */
+            font-family: monospace;
+            /* Optional: Use a monospace font for typing effect */
+        }
     </style>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -347,6 +397,10 @@
                     <i class="fas fa-external-link-alt"></i> 直奔 Google Sheets
                 </a>
             </h2>
+            <div class="description-box">
+                <p id="descriptionText">This is a simple description for the event. It will appear with a typing
+                    animation.</p>
+            </div>
             <p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
                 Kamijo Salon Bar 在 Line 熱點找得到，但 Google Map 上就只能用地址去搜尋。<br>
                 因為 Google 地圖上沒有相關數據可以觀看，所以 Google Sheet 裡面這家酒吧就沒有列席。
