Enhance description layout and update content for 2025條通祭
- Adjust description box positioning for improved layout:
  - Move vertical position to 50px and horizontal position to 200px.

- Add detailed description for 2025條通祭:
  - Highlight collaboration with 40 bars and 3 restaurants.
  - Mention immersive cultural tours and microdrunken strolls.

- Improve readability and visual presentation:
  - Ensure overflow hidden for text animation.
  - Add white-space nowrap for a single-line effect.
  - Enhance the typing animation with a cursor effect.

--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
         .description-box {
             position: absolute;
             /* Position relative to the container */
-            top: 0;
+            top: 50px;
             /* Adjust vertical position */
-            left: 50px;
+            left: 200px;
             /* Adjust horizontal position */
             background-color: white;
             border: 1px solid #ccc;
@@ -332,6 +332,7 @@
             width: 300px;
             /* Adjust width as needed */
         }
+
 
         /* Typing Animation */
         @keyframes typing {
@@ -358,7 +359,9 @@
 
         #descriptionText {
             overflow: hidden;
+            /* Hide overflow */
             white-space: nowrap;
+            /* Keep text on one line */
             border-right: 2px solid black;
             /* Cursor effect */
             animation:
@@ -411,7 +414,8 @@
             </h2>
             <div class="description-container">
                 <div class="description-box">
-                    <p id="descriptionText"></p>
+                    <p id="descriptionText">2025 條通祭，由在地青年發起，與商圈內 40 家酒吧和 3
+                        家餐廳合作<br>透過「微醺散步」和「沈浸條通」文化導覽等系列活動<br>讓參與者在享受美酒的同時，深入了解條通商圈的歷史與文化</p>
                 </div>
             </div>
             <p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
